--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
     "react-helmet": "^5.2.1",
     "react-markdown": "^4.2.2",
     "react-photoswipe": "^1.3.0",
+    "react-reveal": "^1.2.2",
     "react-slick": "^0.28.1",
+    "rsuite": "^4.10.1",
     "slick-carousel": "^1.8.1"
   },
   "keywords": [
