--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@reach/router": "^1.2.1",
     "@szhsin/react-menu": "^1.10.0",
+    "antd": "^4.16.1",
     "dom-form-serializer": "^1.0.7",
     "gatsby": "^2.17.7",
     "gatsby-image": "^2.2.30",
@@ -46,6 +47,7 @@
     "react-markdown": "^4.2.2",
     "react-photoswipe": "^1.3.0",
     "react-reveal": "^1.2.2",
+    "react-router-dom": "^5.2.0",
     "react-slick": "^0.28.1",
     "rsuite": "^4.10.1",
     "slick-carousel": "^1.8.1"
