--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "google-map-react": "^1.1.6",
     "lodash": "^4.17.19",
     "lodash.clonedeep": "^4.5.0",
+    "mdb-react-ui-kit": "^1.3.0",
     "modern-normalize": "^0.5.0",
     "netlify-cms-app": "^2.9.7",
     "netlify-cms-media-library-uploadcare": "^0.5.5",
